export enum GrpcClientKind {
  ACTIVITY = 'ACTIVITY_CLIENT',
  ADMIN = 'ADMIN_CLIENT',
  APLOS_STATS = 'APLOS_STATS_CLIENT',
  AUCTION = 'AUCTION_CLIENT',
  AUTH = 'AUTH_CLIENT',
  BLOCKCHAIN_STATS = 'BLOCKCHAIN_STATS_CLIENT',
  BLOCKCHAIN_SYNC_AUCTION = 'BLOCKCHAIN_SYNC_AUCTION_CLIENT',
  BLOCKCHAIN_SYNC_PFP = 'BLOCKCHAIN_SYNC_PFP_CLIENT',
  BLOCKCHAIN_SYNC_STAKE = 'BLOCKCHAIN_SYNC_STAKE_CLIENT',
  BUSINESS = 'BUSINESS_CLIENT',
  EMAIL = 'EMAIL_CLIENT',
  IMAGE_THUMBNAIL = 'IMAGE_THUMBNAIL_CLIENT',
  MARKETPLACE = 'MARKETPLACE_CLIENT',
  NFT = 'NFT_CLIENT',
  NFT_IMPORT = 'NFT_IMPORT_CLIENT',
  OFFER = 'OFFER_CLIENT',
  PRICE_CONVERSION = 'PRICE_CONVERSION_CLIENT',
  SALE = 'SALE_CLIENT',
  USER = 'USER_CLIENT',
}
